# Hoseo

./: .gitignore  Factorial.c  ReadMe.md
AiBasic/: 수화 인식 프로젝트.sb3
C_Programming/: ASCII_Practice.c  ASKII_Practice.c  ASKII_Practice.h  Calculator.c  Calculator.h  Factorial.c  Integer.c
C_Programming/C_Programming/: Binary_Add.c  Break_Continue.c  Calculator.c  Char_type.c  Factorial.c  Five_HelloWorld.c  Function_2.c  Integer.c  Leap_year.c  Library.c  Mysource.c  OneLine_Leap.c  Plus.c  array.c  array01.c  exam_6.c  exec.c  exec_3.c  lotto.c  main.c  myheader.h  smartarray.c  source.c
C_Programming/C_Programming.xcodeproj/: project.pbxproj
C_Programming/Practice/: ABC.c  ABCD.c  ABCDE.c  ABCDEF.c  SelectionSortPrectice.c  bubleSort.c  bubleSortPrectice.c  pointer.c  pointerDown.c  pointerUp.c  pointerUp.h  pointer_2.c
DataAnalysiIntroduction/:  KoreaWelfarePanel.ipynb
DataAnalysis/EndData/: End.hwp  End_Code.ipynb
Hoseo_SW/Project/HoseoSwProject/HoseoSwProject02/: pyproject.toml
Hoseo_SW/Project/HoseoSwProject/HoseoSwProject02/hoseoswproject02/: main.py  recipe.json
Hoseo_SW/Project/HoseoSwProject/HoseoSwProject02/hoseoswproject02/models/: list.py
Hoseo_SW/Project/HoseoSwProject/HoseoSwProject02/hoseoswproject02/routes/: info.py  input.py  list.py
Hoseo_SW/Project/HoseoSwProject/HoseoSwProject02/hoseoswproject02/templates/: index.html  info01.html  info02.html  list.html  recipe.html
No_Commit/지능정보입문설계/: 20240307.sb3
Python/: main.ipynb
Python/09_02/: my_turtle.py  my_turtle_02.py
Python/09_23/: problem_01.py  problem_03.py  problem_04.py  (+1 more)
(+143 files in other folders)
